--- a/index.html
+++ b/index.html
@@ -41,52 +41,51 @@
       </p>
       <h4>Learn more</h4>
     </div>
-
-    <div class="row-right">
       <img class="egg" src="images/desktop/image-transform.jpg" alt="">
-    </div>
 
   </div>
 
   <div class="row">
-    <img src="images/desktop/image-stand-out.jpg" alt="">
+    <img class="lamp" src="images/desktop/image-stand-out.jpg" alt="">
     <div class="row-content">
       <h2>Stand out to the right audience</h2>
       <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-      <h4>Learn more</h4>
+      <h3 class="learn-more"> Learn more</h3>
     </div>
   </div>
 
   <div class="row-3">
-    <div class="row-3-content" style="background-image: url(images/desktop/image-graphic-design.jpg);">
+    <div class="row-3-content" style="background-image: url(images/desktop/image-graphic-design.jpg); width: 795px;"">
       <h3>Graphic design</h3>
       <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
     </div>
-    <div class="row-3-content" style=" background-image: url(images/desktop/image-photography.jpg);">
+    <div class="row-3-content" style=" background-image: url(images/desktop/image-photography.jpg); color: hsl(198, 62%, 26%);">
       <h3>Photography</h3>
       <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
     </div> 
   </div>
 
   <div class="testimonials"> 
-    <p>Client testimonials</p>
-    <div class="test-1">
-      <img src="images/image-emily.jpg" alt="">
-      <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-      <p>Emily R.</p>
-      <p>Marketing Director</p>
-    </div>
-    <div class="test-2">
-      <img src="images/image-thomas.jpg" alt="">
-      <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-      <p>Thomas S</p>.
-      <p>Chief Operating Officer</p>
-    </div>
-    <div class="test-3">
-      <img src="images/image-jennie.jpg" alt="">
-      <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-      <p>Jennie F.</p>
-      <p>Business Owner</p>
+    <p class="headline">Client testimonials</p>
+    <div class="tests">
+      <div class="test">
+        <img src="images/image-emily.jpg" alt="">
+        <p class="para">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p class="name">Emily R.</p>
+        <p class="position">Marketing Director</p>
+      </div>
+      <div class="test">
+        <img src="images/image-thomas.jpg" alt="">
+        <p class="para">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p class="name">Thomas S</p>
+        <p class="position">Chief Operating Officer</p>
+      </div>
+      <div class="test">
+        <img src="images/image-jennie.jpg" alt="">
+        <p class="para">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p class="name">Jennie F.</p>
+        <p class="position">Business Owner</p>
+      </div>
     </div>
   </div>
 
@@ -98,25 +97,25 @@
   </div>
 
   <div class="footer">
-    <img src="images/logo.svg" alt="">
-    <div class="nav-footer">
+    <h2 class="footer-logo">SUNNYSIDE</h2>
+    <div class="nav">
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Projects</a>
-      <a href="#">Contact</a>
     </div>
 
-    <div>
+    <div class="icons">
       <img src="images/icon-facebook.svg" alt="">
       <img src="images/icon-instagram.svg" alt="">
       <img src="images/icon-twitter.svg" alt="">
       <img src="images/icon-pinterest.svg" alt="">
     </div>
-  </div>
+  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">ARAVIND RAM</a>.
   </div>
+</div>
 </body>
 </html>
